--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -207,13 +207,58 @@ header {
     text-shadow: 2.5px 2px rgb(56, 55, 55)
   }
   #imagenFooter{
-   width: 161.09;
-   height: 19.22;   
+   width: 161.09px;
+   height: 19.22px;   
    display: flex;
    justify-content: end;
   }
   footer {
-    bottom: 0;
     width: 100%;
     position:relative;
   }
+
+  @media screen and (max-width:881px){
+    header{
+      display: none;
+    }
+    main{
+      padding-top: 0;
+    }
+    .indice-footer{
+      width: 100%;
+    }
+    #letra-footer{
+      width: 100%;
+      height: 100%;
+    }
+    #imagenFooter{
+      display: flex;
+      justify-content:left;
+      height: 60%;
+    }
+    nav{
+      padding: 0;
+    }
+  }
+  @media screen  and (max-width: 1199px){
+    header{
+      display: none;
+    }
+    .indice-footer{
+      width: 100%;
+    }
+    #letra-footer{
+      width: 100%;
+      height: 100%;
+    }
+    #imagenFooter{
+      display: flex;
+      justify-content:left;
+      height: 60%;
+    }
+    nav{
+      padding: 0;
+    }
+  }
+  
+ 
