Agregacion de ajax en contacto.html

--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -255,7 +255,10 @@ h2{
 }
 #contenedor-x{
   display: flex;
-  justify-content: end;
-
+  justify-content: end
   
+}
+.ContenedorInputs{
+  display: flex;
+  flex-direction: column;
 }
