--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -221,6 +221,36 @@ header {
     header{
       display: none;
     }
+    #login{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .contenedorModal2{
+      width: fit-content;
+      flex-direction: column;
+      height: fit-content;
+    }
+    .contenedor-Registrar{
+      width: fit-content;
+      height: fit-content;
+    }
+    #x-registrar{
+      width: 100%;
+    }
+    #btnregistrarUsuario{
+      margin-top: 10px;
+    }
+    #ContenedorInputs{
+      display: flex;
+      flex-direction: column;
+      background-color: aqua;
+    }
+    #formulario-login{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
     main{
       padding-top: 0;
     }
