--- a/CSS/Contacto.css
+++ b/CSS/Contacto.css
@@ -9,7 +9,9 @@ body {
   overflow-x: hidden;
   height: 90%;
 }
-
+h2{
+  text-align: center;
+}
 html {
   height: 100vh;
 }
@@ -178,10 +180,50 @@ h1 {
   color: white;
   font-size: 20px;
 }
-@media screen and (max-width: 767px){
+@media screen and (max-width: 700px){
 
+#texto-contacto{
+  margin-top: 40%;
+  width: 100%;
+}
+.texto-contacto{
+  width: 100%;
+}
+#pregunta{
+  width: 100%;
+}
+.show{
+  position: absolute;
+}
+footer{
+  position: absolute;
+}
+}
 
-
-
-
+@media screen and (min-width:701px) and (max-width: 1199px){
+  #texto-contacto{
+    width: 100%;
+    height: 100%;
+    margin-top: 20%;
+  }
+  .texto-contacto{
+    width: 100%;
+    height: 100%;
+  }
+  #pregunta{
+    width: 100%;
+    height: 100%;
+  }
+  #ContenedorTotalContacto{
+     display: flex;
+     flex-direction: column;
+     justify-content: center;  
+     align-items: center;
+  }
+  .show{
+    position: absolute;
+  }
+  footer{
+    position: absolute;
+  }
 }
