--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -113,29 +113,17 @@ body{
     border: 1px solid rgb(42, 10, 228);
 }
 
-#botonEncabezado{
-  display: none;
-}
-#logoMediaQuery{
-  display:none;
-  
-}
-#loginMedia{
-  display: none;
-}
-#opcionesMedia{
-  display: none;
-}
+
 @media screen and (max-width:991){
   .imagen-mision{
     max-width: 50%;
 }
 .imagen-vision{
-  width: 50%;
+  max-width: 50%;
 }
 
 .imagen-valores{
-    width: 50%;
+    max-width: 50%;
     margin-bottom: 10px;
   }
   html{
@@ -166,21 +154,10 @@ body{
   }
  
 }
-@media screen and (max-width: 767px){
+@media screen and (max-width: 700px){
   .imagen-mision{
     max-width: 50%;
 }
-#logoMediaQuery{
-  display:block;
-  width: 50%;
-}
-#loginMedia{
-  display: block;
-}
-#opcionesMedia{
-  display:block; 
-}
-
 
 .imagen-vision{
   width: 50%;
@@ -207,58 +184,32 @@ body{
   #imagenFooter{
     width: 80%;
   }
-  .contenedor{
-    width:fit-content;
-    height: 100%;
-    margin: 0px;
-  }
+  
   .valores{
     align-items: center;
     flex-direction: column-reverse;
   }
 }
 
-#contenedorBotonEncabezado{
-   display: flex;
-   justify-content: space-between;
-   background-color: white;
-   align-items: center;
-}
-#menu{
-  display: none;
-  flex-direction: column;
-  width: fit-content;
-  height: fit-content;
-  position: fixed;
-  background-color: rgb(70, 132, 138);
-
-
-}
-h2{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: rgba(7, 55, 59, 0.908);
-}
-.enlace-menu{
-  background-color: white;
-  border:1px solid black;
-  border-radius: 5px;
-  margin: 5px;
-  width: fit-content;
-  color: rgba(7, 55, 59, 0.908);
-  font-family: Arial, Helvetica, sans-serif;
-  box-shadow: 2px 2px 2px rgba(23, 120, 129, 0.908);
-}
-#contenedorTotalMenu{
-  display: flex;
-  justify-content: end;
-
-}
-#contenedor-x{
-  display: flex;
-  justify-content: end
-  
-}
-.ContenedorInputs{
-  display: flex;
-  flex-direction: column;
+@media screen and (min-width:701px) and (max-width: 1199px){
+         #encabezado{
+          width: 100%;
+         }
+         .imagen-mision{
+          max-width: 50%;
+      }
+      
+      .imagen-vision{
+        width: 50%;
+      }
+      
+      .imagen-valores{
+          width: 50%;
+          margin-bottom: 10px;
+        }
+        .valores{
+          display:flex;
+          flex-direction: column-reverse;
+          align-items: center;
+        }
 }
