--- a/CSS/Contacto.css
+++ b/CSS/Contacto.css
@@ -195,12 +195,15 @@ h1 {
 .show{
   position: absolute;
 }
-footer{
-  position: absolute;
-}
 }
 
 @media screen and (min-width:701px) and (max-width: 1199px){
+  html{
+    overflow-x:hidden;
+  }
+  header{
+    z-index: 9999;
+  }
   #texto-contacto{
     width: 100%;
     height: 100%;
@@ -225,5 +228,17 @@ footer{
   }
   footer{
     position: absolute;
+    width: 100%;
   }
+  #parrafo{
+    font-size: 150%;
+  }
+  h2{
+    font-size: 150%;
+  }
+}
+@media screen and (min-width:1199px) and (max-width:1919px){
+     footer{
+      bottom: 0;
+     }
 }
