--- a/CSS/Contacto.css
+++ b/CSS/Contacto.css
@@ -180,8 +180,17 @@ h1 {
   color: white;
   font-size: 20px;
 }
-@media screen and (max-width: 700px){
+ul.indice-footer {
+  position: absolute;
+  bottom: 0;
 
+}
+@media screen and (max-width: 700px){
+  ul.indice-footer {
+    position: relative;
+    bottom: 0;
+  
+  }
 #texto-contacto{
   margin-top: 40%;
   width: 100%;
@@ -236,9 +245,19 @@ h1 {
   h2{
     font-size: 150%;
   }
+  ul.indice-footer {
+    position: relative;
+    bottom: 0;
+  
+  }
 }
 @media screen and (min-width:1199px) and (max-width:1919px){
      footer{
       bottom: 0;
      }
+     ul.indice-footer {
+      position: relative;
+      bottom: 0;
+    
+    }
 }
