--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -7,16 +7,20 @@ header {
   margin: 0 auto;
 }
 
+#encabezado{
+  width: 100%;
+}
+
 header section{
   display: flex;
 }
 
 #nube {
-  width: 50px;
+  width: 100px;
 }
 
 #letra {
-  width: 100px;
+  width: 120px;
 }
 
 nav {
@@ -497,8 +501,8 @@ h2 {
   }
 
   #boton{
-    width: 100px;
-    height: 50px;
+    width: 88px;
+    height: 47px;
     font-size: 25px;
   }
 
